Fix line chart broken, fix reset and improve look n feel of spacings

--- a/Viz/base.css
+++ b/Viz/base.css
@@ -12,11 +12,13 @@ body {
 
     display: grid;
     margin: 0;
+    height: 100%;
 }
 
 /* Topbar */
 .topbar {
     display: flex;
+    height: fit-content;
     justify-content: space-evenly;
     background-color: #252424;
     padding: 2px 10px 3px 10px;
@@ -77,16 +79,27 @@ body {
 
 /* Idioms Grouping */
 .idioms {
-    margin: 8px 20px;
-    display: grid;
-    grid-template-columns: 350px 600px 500px 350px;
-    grid-column-gap: 10px;
-    grid-template-rows: 93%;
+    /*margin: 8px 20px;*/
+    /*margin: 0 auto;*/
+    display: inline-flex;
+    align-items: center;
+    /*grid-template-columns: 350px 600px 500px 350px;*/
+    /*grid-column-gap: 10px;*/
+    /*grid-template-rows: 820px;*/
+    place-content: space-evenly;
+    height: 820px;
+}
+
+.idiom-column {
+    display: flex;
+    flex-direction: column;
+    place-content: space-between;
+    height: 820px;
 }
 
 .idiom {
     border: 1px black solid;
-    margin: 7px;
+    /*margin: 7px;*/
     border-radius: 30pt;
     background-color: #ffffff;
     text-align: center;
